deleted redundant code, and wrapped section title in a div to set width (prevents overlap with icon)

--- a/client/src/components/course-work/coursework.css
+++ b/client/src/components/course-work/coursework.css
@@ -20,12 +20,15 @@
   margin-bottom: 2rem;
   background-color: #21ba45;
   color: white;
-  font-size: 1.5rem;
   cursor: pointer;
+}
+.section-title {
   font-family: "Poppins", sans-serif;
   letter-spacing: 2px;
   font-size: 1.3rem;
+  width: 95%;
 }
+
 .section-opened {
   position: relative;
   border-top-left-radius: 10px;
@@ -46,6 +49,7 @@
   transform: translate(-50%, -50%);
   right: 0.75rem;
   top: 50%;
+  font-size: 1.5rem;
 }
 
 .units-container {
